--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
 Flask>=2.0.2
+sqlalchemy>=1.3.0
+pandas>=1.0.3
+pytest
+flask-restful
+flask-cors
+flask-sqlalchemy
+# flask-migrate
+# flask-login
+# flask-wtf
+# flask-bootstrap
